// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterRedundantErrors should handle anyOf 1`] = `
Object {
  "children": Object {
    "a": Object {
      "children": Object {
        "b": Object {
          "children": Object {},
          "errors": Array [
            Object {
              "keyword": "required",
            },
          ],
        },
      },
    },
  },
}
`;

exports[`filterRedundantErrors should handle enum - sibling 1`] = `
Object {
  "children": Object {
    "a2": Object {
      "children": Object {},
      "errors": Array [
        Object {
          "keyword": "additionalProperty",
        },
      ],
    },
  },
}
`;

exports[`filterRedundantErrors should handle enum 1`] = `
Object {
  "children": Object {
    "a": Object {
      "children": Object {
        "b": Object {
          "children": Object {},
          "errors": Array [
            Object {
              "keyword": "enum",
            },
            Object {
              "keyword": "enum",
            },
          ],
        },
      },
    },
  },
}
`;

exports[`filterRedundantErrors should prioritize required 1`] = `
Object {
  "children": Object {
    "a": Object {
      "children": Object {},
      "errors": Array [
        Object {
          "keyword": "required",
        },
      ],
    },
  },
}
`;

exports[`makeTree works on array dataPath 1`] = `
Object {
  "children": Object {
    "/root": Object {
      "children": Object {
        "/child/0": Object {
          "children": Object {},
          "errors": Array [
            Object {
              "dataPath": "/root/child/0",
            },
          ],
        },
        "/child/1": Object {
          "children": Object {},
          "errors": Array [
            Object {
              "dataPath": "/root/child/1",
            },
          ],
        },
      },
      "errors": Array [],
    },
  },
}
`;

exports[`makeTree works on array item dataPath 1`] = `
Object {
  "children": Object {
    "/root": Object {
      "children": Object {
        "/child/0": Object {
          "children": Object {
            "/grand-child": Object {
              "children": Object {},
              "errors": Array [
                Object {
                  "dataPath": "/root/child/0/grand-child",
                },
              ],
            },
          },
          "errors": Array [],
        },
        "/child/1": Object {
          "children": Object {
            "/grand-child": Object {
              "children": Object {},
              "errors": Array [
                Object {
                  "dataPath": "/root/child/1/grand-child",
                },
              ],
            },
          },
          "errors": Array [],
        },
      },
      "errors": Array [],
    },
  },
}
`;

exports[`makeTree works on empty array 1`] = `
Object {
  "children": Object {},
}
`;

exports[`makeTree works on nested dataPath 1`] = `
Object {
  "children": Object {
    "/root": Object {
      "children": Object {
        "/child": Object {
          "children": Object {},
          "errors": Array [
            Object {
              "dataPath": "/root/child",
            },
          ],
        },
      },
      "errors": Array [],
    },
  },
}
`;

exports[`makeTree works on root dataPath 1`] = `
Object {
  "children": Object {
    "": Object {
      "children": Object {},
      "errors": Array [
        Object {
          "dataPath": "",
        },
      ],
    },
  },
}
`;
